# gestao_financeira

./: .env-example  FRONTEND_IMPROVEMENTS.md  README.md  main.py  pyproject.toml
api/routes/: userRouter.py
backend/: .env-example  Dockerfile  README.md  database.py  docker-compose.yml  main.py  pyproject.toml
backend/api/: apiController.py  controller.py
backend/api/routes/: __init__.py  auth.py  authRouter.py  categoryRouter.py  reportRouter.py  transactionRouter.py  userRouter.py
backend/api/services/: authService.py  categoryService.py  reportService.py  transactionService.py  userService.py
backend/dto/auth/: TokenDTO.py  __init__.py
backend/dto/category/: CategoryCreateDTO.py  CategoryResponseDTO.py  CategoryUpdateDTO.py  __init__.py
backend/dto/transaction/: TransactionCreateDTO.py  TransactionResponseDTO.py  TransactionUpdateDTO.py  __init__.py
backend/dto/user/: UserCreateDTO.py  UserResponseDTO.py  UserUpdateDTO.py  __init__.py
backend/middleware/: auth.py
backend/models/: Category.py  CategoryModel.py  Transaction.py  TransactionModel.py  User.py  UserModel.py
backend/models/Enums/: TypeEnum.py
backend/schemas/: ExpenseByCategorySchema.py  balanceTimelineSchema.py  comparisonSchema.py  summarySchema.py
backend/utils/: security.py
docs/: next_steps.md  roadmap.md  session_logs.md
dto/user/: UserResponseDTO.py
frontend/: .env  .env-example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx  router.jsx  router_NEW.jsx
models/: User.py
(+39 files in other folders)
